/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option java_package = "com.dremio.service.jobresults";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "JobResultsServiceRPC";

package dremio.jobresults;

import "UserBitShared.proto";
import "Coordination.proto";
import "GeneralRPC.proto";
import "google/protobuf/empty.proto";

service JobResultsService {
  rpc jobResults(stream JobResultsRequest) returns (stream JobResultsResponse);
}

message JobResultsRequest {
  exec.shared.QueryData header = 1;
  int64 sequenceId = 2;
  bytes data = 3;
  exec.NodeEndpoint foreman = 4;
}

message JobResultsResponse {
  exec.rpc.Ack ack = 1;
  int64 sequenceId = 2;
}
